--- a/tsa-web/build.gradle
+++ b/tsa-web/build.gradle
@@ -9,4 +9,6 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.0.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.0.0.RELEASE'
     compile group: 'org.webjars', name: 'bootstrap', version: '4.0.0'
+    compile group: 'org.apache.poi', name: 'poi', version: '3.17'   
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
 }
