--- a/tsa-gui/build.gradle
+++ b/tsa-gui/build.gradle
@@ -1,12 +1,25 @@
 // Apply the java plugin to add support for Java
+
 apply plugin: 'application'
 
-mainClassName = 'com.tpg.survey.gui.main.Application'
 
-// In this section you declare the dependencies for your production and test code
-dependencies {
-    // Common Code Dependency    
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.0.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.0.0.RELEASE'
-    compile group: 'org.webjars', name: 'bootstrap', version: '4.0.0'
+mainClassName = 'com.tpg.survey.gui.main.Application'
+plugins {
+  id "com.moowork.node" version "0.12"
 }
+
+version '0.0.1'
+
+node {
+  version = '6.8.0'
+  npmVersion = '3.10.8'
+  download = true
+  workDir = file("${project.buildDir}/node")
+  nodeModulesDir = file("${project.projectDir}")
+}
+
+task build(type: NpmTask) {
+  args = ['run', 'build']
+}
+
+build.dependsOn(npm_install)
