--- a/tsa-web/build.gradle
+++ b/tsa-web/build.gradle
@@ -11,4 +11,7 @@ dependencies {
     compile group: 'org.webjars', name: 'bootstrap', version: '4.0.0'
     compile group: 'org.apache.poi', name: 'poi', version: '3.17'   
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
+    compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+    compile group: 'jfree', name: 'jcommon', version: '1.0.16'
+    compile group: 'jfree', name: 'jfreechart', version: '1.0.13'
 }
