--- a/tsa-web/src/main/resources/application.properties
+++ b/tsa-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-source.port: 8090
+server.port=8090
 welcome.message: Hello!
 talent.survey.questions.file.name: C://Users//deepti.dubey//Desktop//talentSurveyQuestionnaire.xlsx
 talent.survey.response.file.name: C://Users//deepti.dubey//Desktop//talentSurveyResponse.xlsx
