--- a/tsa-web/src/main/resources/application.properties
+++ b/tsa-web/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 welcome.message: Hello!
+gui.base.url: localhost
+gui.port: 4200
+
+#Spring Data Source configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/survey_database?useSSL=false
+spring.datasource.username=survey
+spring.datasource.password=survey
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15
+
+# Spring JPA configurations
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Hibernate Logging configurations
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Mail configuration
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.username=amit.bharti@3pillarglobal.com
+spring.mail.password=secret
+spring.mail.port=587
+spring.mail.protocol=smtp
