--- a/tsa-web/src/main/resources/application.properties
+++ b/tsa-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 welcome.message: Hello!
-gui.base.url: localhost
+gui.hostname: localhost
 gui.port: 4200
 
 #Spring Data Source configurations
@@ -16,16 +16,23 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show-sql=true
 
 # Hibernate Logging configurations
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Mail configuration
+# EMail configuration
 spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.host=smtp.gmail.com
-spring.mail.username=amit.bharti@3pillarglobal.com
-spring.mail.password=secret
+spring.mail.username=
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
+spring.mail.smtp.auth=true
+
+# EMail properties
+sender.email=no-reply@3pillarglobal.com
+survey.email.subject=Employee Survey
+survey.admin.email=amit.bharti@3pillarglobal.com
