--- a/tsa-web/src/main/resources/application.properties
+++ b/tsa-web/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.show-sql=false
 
 # Hibernate Logging configurations
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # EMail configuration
@@ -40,4 +40,4 @@ spring.mail.smtp.auth=true
 # EMail properties
 sender.email=no-reply@3pillarglobal.com
 survey.email.subject=Employee Survey
-survey.admin.email=amit.bharti@3pillarglobal.com
+survey.admin.email=
