- changing path of input and output spreadsheets - input file is placed in tas-web project - once response will be submitted, the file will be created or appended in the tsa-web project

--- a/tsa-web/src/main/resources/application.properties
+++ b/tsa-web/src/main/resources/application.properties
@@ -4,8 +4,8 @@ gui.base.url: localhost
 gui.port: 8080
 server.port=8090
 
-talent.survey.questions.file.name: C://Users//deepti.dubey//Desktop//talentSurveyQuestionnaire.xlsx
-talent.survey.response.file.name: C://Users//deepti.dubey//Desktop//talentSurveyResponse.xlsx
+talent.survey.questions.file.name: talentSurveyQuestionnaire.xlsx
+talent.survey.response.file.name: talentSurveyResponse.xlsx
 
 #Spring Data Source configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/survey_database?useSSL=false
