--- a/tsa-web/src/main/resources/application.properties
+++ b/tsa-web/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port=8090
 
 talent.survey.questions.file.name: talentSurveyQuestionnaire.xlsx
 talent.survey.response.file.name: talentSurveyResponse.xlsx
+talent.survey.response.sample.file.name: SampleResponse.xlsx
 
 #Spring Data Source configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/survey_database?useSSL=false
