--- a/tsa-web/build.gradle
+++ b/tsa-web/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
     compile group: 'jfree', name: 'jcommon', version: '1.0.16'
     compile group: 'jfree', name: 'jfreechart', version: '1.0.13'
+    compile group: 'com.lowagie', name: 'itext', version: '2.1.7'
     
     compile group: 'net.sf.jasperreports', name: 'jasperreports', version: '5.6.1'
     compile group: 'net.sf.jasperreports', name: 'jasperreports-fonts', version: '6.0.0'
